objects/Immovables__c.object
<CustomObject>
    <fields>
        <fullName>Additional_structures__c</fullName>
        <label>Additional structures</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>garage</fullName>
                </value>
                <value>
                    <fullName>household building</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_date__c</fullName>
        <label>Application date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>Immovables</relationshipLabel>
        <relationshipName>Immovables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_address__c</fullName>
        <formula>Town__c  + &quot;, &quot; +  Street_address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>if(ISBLANK(Picture__c), &apos;&apos;, IMAGE(Picture__c, &quot;Picture&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Initial cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Living_space__c</fullName>
        <label>Living space</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Minimum_cost__c</fullName>
        <label>Мinimum cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_bathrooms__c</fullName>
        <label>Number of bathrooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_floors_in_the_house__c</fullName>
        <label>Number of floors in the house</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_rooms__c</fullName>
        <label>Number of rooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Seller</label>
        <referenceTo>Seller__c</referenceTo>
        <relationshipLabel>Immovables</relationshipLabel>
        <relationshipName>Immovables</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Size_of_the_land_plot__c</fullName>
        <description>the size of the land plot in acres</description>
        <inlineHelpText>the size of the land plot in acres</inlineHelpText>
        <label>Size of the land plot</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>premium</fullName>
                </value>
                <value>
                    <fullName>residential</fullName>
                </value>
                <value>
                    <fullName>requires repair</fullName>
                </value>
                <value>
                    <fullName>after the builders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>available</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>sales</fullName>
                </value>
                <value>
                    <fullName>the sale is temporarily suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_address__c</fullName>
        <label>Street address</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_area__c</fullName>
        <label>Total area</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <label>Town</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Immovables</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>Immovables Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Immovables</pluralLabel>
    <recordTypes>
        <fullName>Flat_Type</fullName>
        <active>true</active>
        <label>Flat Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>House_Type</fullName>
        <active>true</active>
        <label>House Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AreaCheck</fullName>
        <active>true</active>
        <errorConditionFormula>Total_area__c &lt;=0  ||  Living_space__c &lt;=0</errorConditionFormula>
        <errorMessage>check the value of the area</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CostCheck</fullName>
        <active>true</active>
        <errorConditionFormula>Minimum_cost__c &lt;0 ||  Initial_cost__c &lt;0</errorConditionFormula>
        <errorMessage>the cost must be a positive number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DateRule</fullName>
        <active>true</active>
        <errorConditionFormula>DATETIMEVALUE(Application_date__c )   &gt;  NOW()</errorConditionFormula>
        <errorDisplayField>Application_date__c</errorDisplayField>
        <errorMessage>date has not yet come</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FloorCheck</fullName>
        <active>true</active>
        <errorConditionFormula>Floor__c &lt; 0 ||  Floor__c &gt;  Number_of_floors_in_the_house__c ||  Number_of_floors_in_the_house__c &lt; 0</errorConditionFormula>
        <errorMessage>specify the number of storeys correctly</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MinCostRule</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Minimum_cost__c &gt;  Initial_cost__c , true, false)</errorConditionFormula>
        <errorDisplayField>Minimum_cost__c</errorDisplayField>
        <errorMessage>Minimum cost should not exceed Initial cost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NumberRoom</fullName>
        <active>true</active>
        <errorConditionFormula>Number_of_bathrooms__c &lt; 0 ||  Number_of_rooms__c &lt;0</errorConditionFormula>
        <errorMessage>Number of bathrooms or rooms must must be a positive number</errorMessage>
    </validationRules>
</CustomObject>